--- a/Addressverwaltung/Views/AddressListPage.xaml
+++ b/Addressverwaltung/Views/AddressListPage.xaml
@@ -1,8 +1,16 @@
 <ContentPage
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:converters="clr-namespace:Adressverwaltung.Converters"
     x:Class="Adressverwaltung.Views.AddressListPage"
     Title="Adressen">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:NullToBoolConverter x:Key="NullToBoolConverter"/>
+            <converters:PhotoSizeConverter x:Key="PhotoSizeConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="✚ Neue Adresse"
@@ -29,7 +37,13 @@
                         </SwipeView.RightItems>
 
                         <Frame Margin="5" Padding="10" CornerRadius="10" HasShadow="True">
-                            <VerticalStackLayout>
+                            <VerticalStackLayout Spacing="5">
+
+                               <Image Source="{Binding PhotoPath}" Aspect="AspectFill"
+                                       HeightRequest="{Binding PhotoPath, Converter={StaticResource PhotoSizeConverter}}"
+                                       WidthRequest="{Binding PhotoPath, Converter={StaticResource PhotoSizeConverter}}"
+                                       IsVisible="{Binding PhotoPath, Converter={StaticResource NullToBoolConverter}}" />
+
                                 <Label Text="{Binding FirstName}" FontAttributes="Bold" FontSize="16"/>
                                 <Label Text="{Binding LastName}" FontSize="16"/>
                                 <Label Text="{Binding Company}" FontSize="14" TextColor="Gray"/>
